<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/content_display_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.prateek.businesscard.DisplayInfoFragment"
        tools:showIn="@layout/activity_display_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp"
            android:background="@color/disp">

            <TextView
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="arial"
                android:textSize="32sp" />
            <ImageView
                android:id="@+id/disp_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/basic"
            android:padding="12dp"
           >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/occupation"
                android:textSize="@dimen/placeholder_text"
                android:paddingRight="@dimen/placeholder_padding"
                android:textColor="@color/head"
                />
            <TextView
                android:id="@+id/occ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:textColor="@color/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="@dimen/placeholder_text"
            android:paddingRight="@dimen/placeholder_padding"
            android:textColor="@color/head"/>
        <TextView
            android:id="@+id/comp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="@dimen/placeholder_text"
            android:paddingRight="@dimen/placeholder_padding"
            android:textColor="@color/head"/>
        <TextView
            android:id="@+id/phone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:textSize="@dimen/placeholder_text"
            android:paddingRight="@dimen/placeholder_padding"
            android:textColor="@color/head"/>
        <TextView
            android:id="@+id/work1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:elevation="4dp"
        android:background="@color/basic2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hangout"
            android:textSize="@dimen/placeholder_text"
            android:paddingRight="@dimen/placeholder_padding"
            android:textColor="@color/head"/>
        <TextView
            android:id="@+id/hang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skype"
            android:textSize="@dimen/placeholder_text"
            android:paddingRight="@dimen/placeholder_padding"
            android:textColor="@color/head"/>
        <TextView
            android:id="@+id/skp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textSize="@dimen/placeholder_text"
            android:paddingRight="@dimen/placeholder_padding"
            android:textColor="@color/head"/>
        <TextView
            android:id="@+id/goog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fb"
            android:textSize="@dimen/placeholder_text"
            android:paddingRight="@dimen/placeholder_padding"
            android:textColor="@color/head"/>
        <TextView
            android:id="@+id/faceb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blog"
            android:textSize="@dimen/placeholder_text"
            android:paddingRight="@dimen/placeholder_padding"
            android:textColor="@color/head"/>
        <TextView
            android:id="@+id/blog1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>
    </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>